manifests/network-policies/admin-api-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: admin-api-netpol
  namespace: ticketops
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  podSelector:
    matchLabels:
      app: admin-api
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
             matchLabels:
               app: dashboard
      ports:
        - port: 4000
  egress:
    - ports:
        - port: 5432
        - port: 53
      protocol: TCP
    - ports:
        - port: 53
      protocol: UDP
