manifests/network-policies/booking-worker-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: bookings-worker-netpol
  namespace: ticketops
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  podSelector:
    matchLabels:
      app: bookings-worker
  policyTypes:
    - Ingress
    - Egress
  egress:
    - ports:
        - port: 6379
        - port: 5432
        - port: 53
      protocol: TCP 
    - ports:
        - port: 53
      protocol: UDP
