manifests/network-policies/dashboard-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dashboard-netpol
  namespace: ticketops
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  podSelector:
    matchLabels:
      app: dashboard
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - ports:
          - port: 80
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: admin-api
      ports:
        - port: 4000
    - to:
        - podSelector:
            matchLabels:
              app: events-api
      ports:
        - port: 3000
    - ports: 
        - port: 53
      protocol: TCP
    - ports:
        - port: 53
      protocol: UDP
