manifests/network-policies/pgbouncer-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pgbouncer-netpol
  namespace: ticketops
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  podSelector:
    matchLabels:
      app: pgbouncer
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: events-api
        - podSelector:
            matchLabels:
              app: admin-api
        - podSelector:
            matchLabels:
              app: bookings-worker
      ports:
        - port: 5432
  egress:
    - ports:
        - port: 5432
        - port: 53
      protocol: TCP
    - ports:
        - port: 53
      protocol: UDP
