manifests/network-policies/seat-lock-expiry-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: seat-lock-expiry-netpol
  namespace: ticketops
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  podSelector:
    matchLabels:
      app: seat-lock-expiry
  policyTypes:
    - Egress
  egress:
    - ports:
        - port: 5432
        - port: 53
      protocol: TCP
    - ports:
        - port: 53
      protocol: UDP
